recursive structural pattern matching