@@ -9,10 +9,12 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.Test;
 
 import com.aol.cyclops.control.AnyM;
+import com.aol.cyclops.util.stream.StreamUtils;
 
 public class LiftAndBindSequenceMTest {
 	@Test
@@ -24,7 +26,8 @@ public class LiftAndBindSequenceMTest {
 								.map(getClass().getClassLoader()::getResource)
 								.peek(System.out::println)
 								.map(URL::getFile)
-								.flatMapFile(File::new)
+								.map(File::new)
+								.<String>flatMapAnyM(AnyM::ofConvertable)
 								.toList();
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
@@ -35,7 +38,8 @@ public class LiftAndBindSequenceMTest {
 		
 		List<String> result = AnyM.streamOf("input.file")
 								.asSequence()
-								.flatMapURL(getClass().getClassLoader()::getResource)
+								.map(getClass().getClassLoader()::getResource)
+								.<String>flatMapAnyM(AnyM::ofConvertable)
 								.toList();
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
@@ -44,10 +48,9 @@ public class LiftAndBindSequenceMTest {
 	public void testLiftAndBindString(){
 		
 		
-		List<Character> result = AnyM.streamOf("input.file")
-									.asSequence()
-									.flatMapCharSequence(i->"hello world")
-									.toList();
+		List<Character> result = StreamUtils.flatMapCharSequence(AnyM.streamOf("input.file")
+									.asSequence(),i->"hello world")
+									.collect(Collectors.toList());
 		
 		assertThat(result,equalTo(Arrays.asList('h','e','l','l','o',' ','w','o','r','l','d')));
 	}
@@ -55,12 +58,12 @@ public class LiftAndBindSequenceMTest {
 	public void testLiftAndBindBufferedReader(){
 		
 		
-		List<String> result = AnyM.streamOf("input.file")
+		List<String> result = StreamUtils.flatMapBufferedReader(AnyM.streamOf("input.file")
 								.asSequence()
 								.map(getClass().getClassLoader()::getResourceAsStream)
 								.map(InputStreamReader::new)
-								.flatMapBufferedReader(BufferedReader::new)
-								.toList();
+								,r-> new BufferedReader(r))
+								.collect(Collectors.toList());
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
 	}
