@@ -9,23 +9,25 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.Test;
 
 import com.aol.cyclops.control.AnyM;
+import com.aol.cyclops.util.stream.StreamUtils;
 
 public class LiftAndBindTest {
 	@Test
 	public void testLiftAndBindFile(){
 		
 	
-		List<String> result = AnyM.streamOf("input.file")
+		List<String> result = StreamUtils.flatMapFile(AnyM.streamOf("input.file")
 								.map(getClass().getClassLoader()::getResource)
 								.peek(System.out::println)
 								.map(URL::getFile)
-								.asSequence()
-								.flatMapFile(File::new)
-								.toList();
+								.asSequence(),
+								 File::new)
+								.collect(Collectors.toList());
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
 	}
@@ -33,10 +35,10 @@ public class LiftAndBindTest {
 	public void testLiftAndBindURL(){
 		
 		
-		List<String> result = AnyM.streamOf("input.file")
+		List<String> result = StreamUtils.flatMapURL(AnyM.streamOf("input.file")
 								.asSequence()
-								.flatMapURL(getClass().getClassLoader()::getResource)
-								.toList();
+								,getClass().getClassLoader()::getResource)
+								.collect(Collectors.toList());
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
 	}
@@ -44,10 +46,10 @@ public class LiftAndBindTest {
 	public void testLiftAndBindString(){
 		
 		
-		List<Character> result = AnyM.streamOf("input.file")
+		List<Character> result = StreamUtils.flatMapCharSequence(AnyM.streamOf("input.file")
 								.asSequence()
-								.flatMapCharSequence(i->"hello world")
-								.toList();
+								,i->"hello world")
+								.collect(Collectors.toList());
 		
 		assertThat(result,equalTo(Arrays.asList('h','e','l','l','o',' ','w','o','r','l','d')));
 	}
@@ -55,13 +57,13 @@ public class LiftAndBindTest {
 	public void testLiftAndBindBufferedReader(){
 		
 		
-		List<String> result = AnyM.streamOf("input.file")
+		List<String> result = StreamUtils.flatMapBufferedReader(AnyM.streamOf("input.file")
 								.map(getClass().getClassLoader()::getResourceAsStream)
 								.map(InputStreamReader::new)
-								.asSequence()
-								.flatMapBufferedReader(BufferedReader::new)
+								.asSequence(),
+								BufferedReader::new)
+								.collect(Collectors.toList());
 								
-								.toList();
 		
 		assertThat(result,equalTo(Arrays.asList("hello","world")));
 	}
